--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,11 @@
 @import 'normalize';
 @import 'typography';
 @import 'src/styles/mixins';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 :root {
   /* Font Families */
-  --font-base: 'Creato Display', -apple-system, blinkmacsystemfont, 'Segoe UI',
+  --font-base: 'Inter', -apple-system, blinkmacsystemfont, 'Segoe UI',
   'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
   'Helvetica Neue', sans-serif;
 }
