--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,7 @@ body {
   font-family: var(--font-base);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 a {
@@ -42,11 +43,19 @@ label {
   -webkit-tap-highlight-color: transparent;
 }
 
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: 0;
+}
+
 img {
   color: transparent; // for hide native alt text
   display: block;
   max-width: 100%;
   position: relative;
+  min-height: 100px;
+  height: 100%;
 
   &::after {
     align-items: center;
@@ -70,4 +79,11 @@ img {
 .container {
   background-image: linear-gradient(150.57deg,#d3e4f3 21.26%,#e8ecef 85.79%);
   min-height: 100vh;
+  position: relative;
+  overflow-y: scroll;
+  height: 100vh;
+}
+
+.modal-active {
+  overflow: hidden;
 }
