--- a/src/pages/DashBoard/Breeds/Breed/Breed.module.scss
+++ b/src/pages/DashBoard/Breeds/Breed/Breed.module.scss
@@ -4,9 +4,19 @@
   width: 100%;
 }
 
-.breedTitle {
+.breedTitleWrapper {
+  display: flex;
+  justify-content: center;
   margin-bottom: 12px;
+}
+
+.breedTitle {
   text-align: center;
+  margin: 0 auto;
+}
+
+.goBackBtn {
+  width: 32px;
 }
 
 .breedImg {
